--- a/Model/src/model/ModelBundle.properties
+++ b/Model/src/model/ModelBundle.properties
@@ -1,3 +1,9 @@
 # 
 model.view.BuyerVO_vs_XxTnaDefaultBuyerWiseVO_VL_LABEL=Buyer Vo Vs Xx Tna Default Buyer Wise Vo Vl
-model.lov.PositiveNegativeLOV_LABEL=Positive Negative Lov
+model.lov.DepedencyTypeLOV_LABEL=Positive Negative Lov
+model.entity.XxTnaDefaultBuyerWiseEO_Rule_0=TNA  Date and Depending TNA Date cann''t be same
+model.entity.XxTnaDefaultBuyerWiseEO.DTnaDateId_Rule_0=Depending TNA Date can''t be empty
+
+model.entity.XxTnaDefaultBuyerWiseEO.PositiveNegative_Rule_0=Dependency relationship can''t be empty
+model.entity.XxTnaDefaultBuyerWiseEO.DayDifference_Rule_0=Day Difference can''t be empty
+model.entity.XxTnaDefaultBuyerWiseEO.TnaDateId_Rule_0=TNA Date can''t be empty
