--- a/Model/classes/model/ModelBundle.properties
+++ b/Model/classes/model/ModelBundle.properties
@@ -7,3 +7,6 @@ model.entity.XxTnaDefaultBuyerWiseEO.DTnaDateId_Rule_0=Depending TNA Date can''t
 model.entity.XxTnaDefaultBuyerWiseEO.PositiveNegative_Rule_0=Dependency relationship can''t be empty
 model.entity.XxTnaDefaultBuyerWiseEO.DayDifference_Rule_0=Day Difference can''t be empty
 model.entity.XxTnaDefaultBuyerWiseEO.TnaDateId_Rule_0=TNA Date can''t be empty
+model.view.PocStyleWashFabricVO_LABEL=Poc Style Wash Fabric Vo
+model.lov.BuyerLOV_LABEL=Buyer Lov
+model.lov.SeasonLOV_LABEL=Season Lov
