--- a/Model/classes/model/ModelBundle.properties
+++ b/Model/classes/model/ModelBundle.properties
@@ -10,3 +10,4 @@ model.entity.XxTnaDefaultBuyerWiseEO.TnaDateId_Rule_0=TNA Date can''t be empty
 model.view.PocStyleWashFabricVO_LABEL=Poc Style Wash Fabric Vo
 model.lov.BuyerLOV_LABEL=Buyer Lov
 model.lov.SeasonLOV_LABEL=Season Lov
+model.view.PocStyleWashFabricVO_vs_XxTnaHVO_LABEL=Poc Style Wash Fabric Vo Vs Xx Tna Hvo
