--- a/Model/src/model/ModelBundle.properties
+++ b/Model/src/model/ModelBundle.properties
@@ -11,3 +11,5 @@ model.view.PocStyleWashFabricVO_LABEL=Poc Style Wash Fabric Vo
 model.lov.BuyerLOV_LABEL=Buyer Lov
 model.lov.SeasonLOV_LABEL=Season Lov
 model.view.PocStyleWashFabricVO_vs_XxTnaHVO_LABEL=Poc Style Wash Fabric Vo Vs Xx Tna Hvo
+model.view.PocStyleWashFabricVO.PocId_FMT_FORMATTER=oracle.jbo.format.DefaultNumberFormatter
+model.view.PocStyleWashFabricVO.SystemId_FMT_FORMATTER=oracle.jbo.format.DefaultNumberFormatter
